--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -22,10 +22,9 @@
   background-color: transparent;
 }
 
-/* Existing styles for floating labels */
 .floating-label {
   position: absolute;
-  top: 50%;
+  top: 1.7rem;
   left: 16px;
   transform: translateY(-50%);
   color: #9ca3af;
